# secsnail

./: .gitignore  Cargo.toml  LICENSE  README.md  SEND_FILE.secsnail  review.md
src/: lib.rs  pck.rs  sock.rs  util.rs
src/fsm_recv/: driver.rs  fsm.rs  mod.rs  wait_for_connection.rs  wait_for_pkt.rs
src/fsm_send/: driver.rs  fsm.rs  mod.rs  send.rs  start.rs  wait.rs
